Archive/80be498e7b6c80fe91496d7b9743f553-7904cf83bb2b27db3f32fade22b567cc/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:5:7: error: expected nested-name-specifier before ‘namesapce’
 using namesapce std;
       ^
main.cpp:5:7: error: ‘namesapce’ has not been declared
main.cpp:5:17: error: expected ‘;’ before ‘std’
 using namesapce std;
                 ^
main.cpp:5:17: error: ‘std’ does not name a type
main.cpp: In function ‘int main()’:
main.cpp:10:5: error: ‘cout’ was not declared in this scope
     cout << "Hello world" <<endl;
     ^
main.cpp:10:5: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   ‘std::cout’
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:10:29: error: ‘endl’ was not declared in this scope
     cout << "Hello world" <<endl;
                             ^
main.cpp:10:29: note: suggested alternative:
In file included from /usr/include/c++/4.8/iostream:39:0,
                 from main.cpp:1:
/usr/include/c++/4.8/ostream:564:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
